[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/mapa-do-jogo-placa-vista-superior-100164168.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Personagem.gd" type="Script" id=2]
[ext_resource path="res://Assets/lunetaPronto.png" type="Texture" id=4]
[ext_resource path="res://Assets/relogioFeito.png" type="Texture" id=5]
[ext_resource path="res://Assets/bussolaFeita.png" type="Texture" id=6]
[ext_resource path="res://Assets/Check.png" type="Texture" id=7]
[ext_resource path="res://Assets/chavePronta.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Nivel.gd" type="Script" id=9]
[ext_resource path="res://Assets/Personagem.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 83, 122 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90.5, 93.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 137, 110 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 231.429, 263.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 465, 498 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 9 )

[node name="Mapa-do-jogo-placa-vista-superior-100164168" type="Sprite" parent="."]
position = Vector2( 1219, 849 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 904, 525 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 72, -21 )
shape = SubResource( 1 )

[node name="Personagem" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 72, -21.9999 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D/Personagem"]
position = Vector2( -63.3333, 73.3331 )
scale = Vector2( 3.33333, 3.33333 )
current = true
limit_left = -1379
limit_top = -951
limit_right = 3817
limit_bottom = 2648
limit_smoothed = true

[node name="MapaDoJogo1" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( -697, -376 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="MapaDoJogo2" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( 753, -402 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="MapaDoJogo3" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( -702, 382 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="MapaDoJogo4" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( 758, 398 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="BussolaFeita" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( -181, 383 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="Check" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D/BussolaFeita"]
visible = false
position = Vector2( -610, 300 )
scale = Vector2( 9, 9 )
texture = ExtResource( 7 )

[node name="ChavePronta" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( -78, 386 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )

[node name="Check" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D/ChavePronta"]
visible = false
position = Vector2( -156.381, 85.0901 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )

[node name="LunetaPronto" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( 39, 385 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Check" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D/LunetaPronto"]
visible = false
position = Vector2( -186.667, 103.333 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="RelogioFeito" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D"]
position = Vector2( 164, 381 )
scale = Vector2( 0.21, 0.21 )
texture = ExtResource( 5 )

[node name="Check" type="Sprite" parent="KinematicBody2D/Personagem/Camera2D/RelogioFeito"]
visible = false
position = Vector2( -200, 80.9531 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="ChavePronta" type="Sprite" parent="."]
position = Vector2( 3607, -785 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="ChavePronta"]
position = Vector2( 10, -3.33337 )
scale = Vector2( 1.66667, 1.66667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChavePronta/Area2D"]
position = Vector2( 0.5, 5.5 )
shape = SubResource( 2 )

[node name="LunetaPronto" type="Sprite" parent="."]
position = Vector2( 3585, 1306 )
texture = ExtResource( 4 )

[node name="Area2D2" type="Area2D" parent="LunetaPronto"]
position = Vector2( -8, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LunetaPronto/Area2D2"]
position = Vector2( 12, 1 )
shape = SubResource( 3 )

[node name="RelogioFeito" type="Sprite" parent="."]
position = Vector2( -855, 2306 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="RelogioFeito"]
position = Vector2( 0, 8.57153 )
scale = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RelogioFeito/Area2D3"]
position = Vector2( -4.28577, -6.5 )
shape = SubResource( 4 )

[node name="BussolaFeita" type="Sprite" parent="."]
position = Vector2( -839, -480 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Area2D4" type="Area2D" parent="BussolaFeita"]
position = Vector2( -5, -15 )
scale = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BussolaFeita/Area2D4"]
position = Vector2( -7.49976, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="ChavePronta/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="LunetaPronto/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="RelogioFeito/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="BussolaFeita/Area2D4" to="." method="_on_Area2D4_body_entered"]
